# wintrace-rs

./: Cargo.toml
src/: debugger.rs  helpers.rs  lib.rs  trace_io.rs  variables.rs
src/debugger/: execution_status.rs
src/trace_io/: closehandle.rs  createfile.rs  createfilemapping.rs  mapviewoffile.rs  readfile.rs  writefile.rs
